force-app/main/default/objects/Deal_Update__c/Deal_Update__c.object-meta.xml
<CustomObject>
    <label>(Deprecated) Executive POC Update</label>
    <nameField>
        <displayFormat>DU-{0000}</displayFormat>
        <label>Deal Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(Deprecated) Executive POC Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>