force-app/main/default/objects/Deal_Update__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>