force-app/main/default/objects/Deal_Update__c/fields/Opportunity_Area__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Area__c</fullName>
    <formula>Opportunity__r.Owner_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Area</label>
    <type>Text</type>
</CustomField>