force-app/main/default/objects/Deal_Update__c/fields/Opportunity_Escalation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Escalation_Stage__c</fullName>
    <formula>TEXT(Opportunity__r.Escalation_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Escalation Stage</label>
    <type>Text</type>
</CustomField>