force-app/main/default/objects/Deal_Update__c/fields/Opportunity_POC_Phase__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_POC_Phase__c</fullName>
    <formula>TEXT(Opportunity__r.POC_Phase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity POC Phase</label>
    <type>Text</type>
</CustomField>