force-app/main/default/objects/Deal_Update__c/fields/Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Region__c</fullName>
    <formula>Opportunity__r.Owner_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Region</label>
    <type>Text</type>
</CustomField>