force-app/main/default/objects/Deal_Update__c/fields/Opportunity_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sales_Engineer__c</fullName>
    <formula>Opportunity__r.Rubrik_Sales_Engineer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Sales Engineer</label>
    <type>Text</type>
</CustomField>