force-app/main/default/objects/Deal_Update__c/fields/Opportunity_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Subregion__c</fullName>
    <formula>Opportunity__r.Owner_Sub_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Subregion</label>
    <type>Text</type>
</CustomField>