force-app/main/default/objects/Deal_Update__c/fields/Opportunity_Technical_Validation_Complet__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Technical_Validation_Complet__c</fullName>
    <formula>Opportunity__r.Technical_Validation_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Technical Validation Complet</label>
    <type>Checkbox</type>
</CustomField>