force-app/main/default/objects/Deal_Update__c/fields/POC_Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>POC_Completion_Percent__c</fullName>
    <label>POC Completion Percent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>