force-app/main/default/objects/Deal_Update__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SE</fullName>
                <default>true</default>
                <label>SE</label>
            </value>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>SE Director/VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>