force-app/main/default/objects/Deal_Update__c/recordTypes/SE_Update.recordType-meta.xml
<RecordType>
    <fullName>SE_Update</fullName>
    <active>true</active>
    <label>SE Update</label>
</RecordType>