force-app/main/default/objects/Deal_Update__c/recordTypes/Support_Update.recordType-meta.xml
<RecordType>
    <fullName>Support_Update</fullName>
    <active>true</active>
    <label>Support Update</label>
</RecordType>