force-app/main/default/objects/Deal_Update__c/listViews/All_Deal_Updates.listView-meta.xml
<ListView>
    <fullName>All_Deal_Updates</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>Opportunity_Area__c</columns>
    <columns>Opportunity_Close_Date__c</columns>
    <columns>Opportunity_Escalation_Stage__c</columns>
    <columns>Opportunity_POC_Phase__c</columns>
    <columns>Opportunity_Region__c</columns>
    <columns>Opportunity_Sales_Engineer__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Opportunity_Subregion__c</columns>
    <columns>Opportunity_Technical_Validation_Complet__c</columns>
    <columns>Opportunity_Theater__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Deal Updates</label>
</ListView>